--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -25,6 +25,7 @@ We are using minimal cover algorithms (namely Espresso) to find a small selectio
 
 \tableofcontents
 \newpage
+\section{Introduction}
 \section {Quality control}
 We want to emphasize the importance of quality control (QC) for this approach as it generally relies on the assumption that the data has no inconsistencies at all. 
 
@@ -216,9 +217,6 @@ This result is expected and supports the claim of significance of the found SNPs
 The histogram seems less crowded than the Manhattan plot of the PRS of Figure \ref{fig:manhattan}. Also most of the SNP also have a high PRS value indicating correlation with the phenotype. Repeated results are a sign of confidence, but it also needs to be mentioned, that we are far away from having equal results in all iterations. This also indicates that potentially multiple global optima exist or it hasn't even been found yet.  Except for  the pyramid scheme there do not exist clear "favorite" SNPs but rather a small collection of SNPs appearing more than once.
 
 Another question is whether the global optima or any found cover for this purposes actually has biological credibility in explaining the surveyed phenotype. 
-
-
-
 
 
 \newpage
